# robocompute-sdk

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: API_REFERENCE.md
examples/: README.md
examples/nodejs/: express_integration.js  nestjs_integration.ts
examples/python/: client_basic.py  django_integration.py  fastapi_integration.py  flask_integration.py  provider_node.py  ros2_integration.py
robocompute/: __init__.py  client.py  exceptions.py  provider.py
tests/: README.md  test_client.py  test_exceptions.py  test_provider.py
