[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robocompute-sdk"
version = "1.0.0"
description = "Official SDK for RoboCompute decentralized computing platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RoboCompute Team", email = "support@robocompute.xyz"}
]
keywords = ["robocompute", "decentralized", "computing", "solana", "usdc", "usdt", "robots", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "solana>=0.30.0",
    "base58>=2.1.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ruff>=0.0.287",
]
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
flask = [
    "flask>=3.0.0",
]
ros2 = [
    "rclpy>=3.3.0",
]

[project.urls]
Homepage = "https://robocompute.xyz"
Documentation = "https://robocompute.xyz/clients"
Repository = "https://github.com/robocompute/robocompute-sdk"
Issues = "https://github.com/robocompute/robocompute-sdk/issues"

[tool.setuptools]
packages = ["robocompute"]

[tool.setuptools.package-data]
robocompute = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

